Use the new function registry for the hyperloglog aggregation.